@@ -5,6 +5,8 @@
  - Retired `pqxx::encrypt_password()`.  Use the ones in `pqxx::connection`.
  - Retired `pqxx::prepare::dynamic_params`.  Use `pqxx::params`.
  - Retired deprecated `stream_to` constructors.  Use factory functions.
+ - Retired `transaction_base::unesc_raw()`.  Use `unesc_bin()`.
+ - Retired `transaction_base::quote_raw()`.  Use `quote()` with `bytes_view`.
  - Retired result row slicing.
  - Assume compiler supports concepts.
  - Assume compiler supports integral conversions in `charconv`.
